# reflex-snap-upload-example

./: .gitignore  .gitmodules  README.md  backend.sh  default.nix  frontend.sh
backend/: backend.cabal  default.nix  stack.yaml
backend/src/: Main.hs  Site.hs
frontend/: default.nix  develop.hs  frontend.cabal  go.sh  stack.yaml
frontend/src/: Main.hs
serve/static/: index.html
serve/static/js/: all.js
