Name:                backend
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             BSD3
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

executable backend
  hs-source-dirs: src
  main-is: Main.hs

  build-depends: base
    , bytestring
    , directory
    , filepath
    , MonadCatchIO-transformers
    , mtl
    , snap-core
    , snap-server
    , snap-loader-static
    , text
    , time
